# mission_planner

./: CMakeLists.txt  README.md  package.xml
include/mission_planner/: mission_facade.h  node.h  recorder.h  scheduler.h  trail.h  waypoint.h
launch/: mission.launch
src/: mission.cpp  node.cpp  recorder.cpp  scheduler.cpp  trail.cpp
test/: test_trail.cpp
